After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 589536 - gdm-simple-slave crashed with signal 5 in g_return_if_fail_warning()
gdm-simple-slave crashed with signal 5 in g_return_if_fail_warning()
Status: RESOLVED FIXED
Product: gdm
Classification: Core
Component: general
2.27.x
Other Linux
: Normal critical
: ---
Assigned To: GDM maintainers
GDM maintainers
Depends on:
Blocks:
 
 
Reported: 2009-07-23 20:23 UTC by Sebastien Bacher
Modified: 2010-06-16 23:58 UTC
See Also:
GNOME target: ---
GNOME version: 2.27/2.28



Description Sebastien Bacher 2009-07-23 20:23:08 UTC
The bug has been opened on https://bugs.launchpad.net/bugs/403441

"Not seen this before. Might have been triggered after connecting to a VPN via a personally added menu item.

gdm 2.27.4-0ubuntu2

  • #0 IA__g_logv
    at /build/buildd/glib2.0-2.21.4/glib/gmessages.c line 512
  • #1 IA__g_log
    at /build/buildd/glib2.0-2.21.4/glib/gmessages.c line 526
  • #2 IA__g_return_if_fail_warning
    at /build/buildd/glib2.0-2.21.4/glib/gmessages.c line 541
  • #3 IA__g_array_free
    at /build/buildd/glib2.0-2.21.4/glib/garray.c line 171
  • #4 gdm_slave_finalize
    at gdm-slave.c line 1460
  • #5 IA__g_object_unref
    at /build/buildd/glib2.0-2.21.4/gobject/gobject.c line 2421
  • #6 main
    at simple-slave-main.c line 261

Comment 1 William Jon McCann 2010-06-16 23:58:24 UTC
Fixed in master and 2-30.  Thanks.

commit e8abe6567c5c3a3eab95d2a67bb428c98fc99ad8
Author: William Jon McCann <jmccann@redhat.com>
Date:   Wed Jun 16 19:53:47 2010 -0400

    g_array_free doesn't allow NULLs
    
    https://bugzilla.gnome.org/show_bug.cgi?id=589536