g_array_free doesn't allow NULLs

https://bugzilla.gnome.org/show_bug.cgi?id=589536